--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,25 @@
 //App.scss
+*{
+
+  font-family: Arial, Helvetica, sans-serif;
+
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+  text-decoration: none;
+
+  color: var(--text-color);
+
+}
+
 $font-stack: Helvetica, sans-serif;
 $primary-color: #333;
 
 body {
   font: 100% $font-stack;
   color: $primary-color;
+  background-color: #fffffff8;
 }
 ul {
   display: block;
@@ -15,12 +30,12 @@ ul {
   margin-inline-end: 0px;
   padding-inline-start: 40px;
 }
-.PostTitles{
-  color: #333;
-  text-decoration: none;
-  font-size: 500%;
-  border: solid 1px ;
-}
+// .PostTitles{
+//   color: #333;
+//   text-decoration: none;
+//   font-size: 500%;
+//   border: solid 1px ;
+// }
 
 .Links{
   text-decoration: none;
@@ -30,4 +45,29 @@ ul {
 
 .BlogPostsTitle{
   text-align: center;
+}
+
+
+
+.allTitles{
+  background-color: green;
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 70px;
+  justify-content: space-between;
+  
+
+  .atag{
+  display:flex;
+  align-items: center;
+  gap: 20px;
+  width: max-content;
+  margin-right: 20px;
+  }
+  .circle{
+  width: 20px ;
+    height: 20px ;
+    border-radius: 50%; 
+    background-color: black;
+  }
 }
