--- a/src/css/mainmenu.scss
+++ b/src/css/mainmenu.scss
@@ -2,14 +2,66 @@
 .main-container{
   display: flex;
   gap: var(--pdn);
+  
 }
+
+
+
+
+
+
+
 .left-container{
   background-color: red;
   width: 30%;
   height: calc(100vh - var(--pdn) * 2); //hijack(wat is hijack) height at a later date
   overflow: hidden;
-  
+  border: dashed black 2px;
+  display: flex;
+  flex-direction: column;
+  padding: var(--pdn);
+ 
+
+
+  .left-cont-title{
+    font-size: 3.75rem;
+    border: dashed black 2px;
+    
   }
+
+  .allposts-column{
+    border: dashed black 2px;
+    flex-basis: 100%;
+    background-color:wheat;
+    position: relative;
+    padding-top: var(--pdn);
+  }
+  .fade{
+    height: 3em;
+    background: rgb(255,255,255);
+    background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+
+
+  .footer-component{
+    border: dashed black 2px;
+  }
+
+  }
+  
+
+
+
+
+
+
+
+
+
 .right-container{
   width: 70%;
   background-color: grey;
