--- a/src/App.scss
+++ b/src/App.scss
@@ -27,6 +27,6 @@ $primary-color: #333;
 body {
   font: 100% $font-stack;
   color: $primary-color;
-  background-color: #fffffff8;
+  background-color: #F4F2F2;
 }
 
