set title colour

--- a/src/css/mainmenu.scss
+++ b/src/css/mainmenu.scss
@@ -26,7 +26,7 @@
   .left-cont-title{
     font-size: 3.75rem;
     // border: dashed black 2px;
-    
+    color: #9E9E9E;
   }
 
   .allposts-column{
