--- a/src/css/mainmenu.scss
+++ b/src/css/mainmenu.scss
@@ -60,6 +60,9 @@
 
 .right-container{
   width: 70%;
-  background-color: grey;
+  background-color: #ebebeb;
   border-radius: 10px; //magic number
+  box-shadow: inset 0px 2px 23px rgba(0, 0, 0, 0.25);
+  border: 1px solid rgba(0, 0, 0, 0.233);
+
 }
