--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 //App.scss
+
 *{
 
   font-family: Arial, Helvetica, sans-serif;
@@ -11,6 +12,16 @@
 
   color: var(--text-color);
 
+}
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
+
+*{
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
 }
 
 $font-stack: Helvetica, sans-serif;
@@ -31,6 +42,3 @@ body {
   background-color: #F4F2F2;
 }
 
-.right-container{
-  padding: 35px;
-}
