--- a/src/css/right-container.scss
+++ b/src/css/right-container.scss
@@ -9,6 +9,23 @@
   overflow: hidden;
 }
 
+@keyframes slidein {
+  0%{top: 100%;}
+  100%{top: 0%;}
+  
+  }
+  
+  .inner-shadow{
+    box-shadow: inset 0px 2px 23px rgba(0, 0, 0, 0.25);
+   
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+  }
+  
 .post-wrapper{
   background-color: skyblue;
   animation-name: slidein;
@@ -26,5 +43,14 @@
   // -webkit-box-shadow: 0px 0px 50px -1px rgba(0,0,0,0.73); 
   // box-shadow: 0px 0px 50px -1px rgba(0,0,0,0.73); //could show a lil 1
   
-  
+  .dot{
+   
+  height: 25px;
+  width: 25px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
+  border: solid black;
+  display: inline-block;
+
+  }
 }
