--- a/src/css/right-container.scss
+++ b/src/css/right-container.scss
@@ -14,6 +14,10 @@
   100%{top: 0%;}
   
   }
+  @keyframes fadein {
+    0%{opacity: 0%;}
+    100%{opacity: 100%;}
+  }
   
   .inner-shadow{
     box-shadow: inset 0px 2px 23px rgba(0, 0, 0, 0.25);
@@ -43,14 +47,21 @@
   // -webkit-box-shadow: 0px 0px 50px -1px rgba(0,0,0,0.73); 
   // box-shadow: 0px 0px 50px -1px rgba(0,0,0,0.73); //could show a lil 1
   
-  .dot{
-   
+  .close-tab{
+   animation: fadein ;
   height: 25px;
   width: 25px;
   background-color: rgb(255, 255, 255);
   border-radius: 50%;
-  border: solid black;
+  border: 1px solid black;
   display: inline-block;
+  animation-duration: 15s;
+  position: absolute;
+  left: 97%;
+  cursor: pointer;
 
+  }
+  .close-tab:active{
+    background-color: rgb(3, 179, 3)
   }
 }
