--- a/src/css/leftColumnsection.scss
+++ b/src/css/leftColumnsection.scss
@@ -7,27 +7,27 @@
   display: flex;
   flex-direction: column;
   padding: var(--pdn);
- 
-
-
   
-
+  
+  
+  
   .allposts-column{
-
+    
     flex-basis: 100%;
     position: relative;
     padding-top: var(--pdn);
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-evenly;
-
-   .left-col-dataline{
-    display: grid;
+    
+    .left-col-dataline{
+      display: grid;
       gap: var(--pdn);
       grid-template-columns: repeat(2, 1fr);
       border-top: solid var(--gryline) 1px;
       padding-top: 10px;
       padding-bottom: 10px;
+      padding-left: 5px;
       
    }
    
@@ -44,4 +44,20 @@
   }
 
 
+  }
+
+  .hover-1  {
+    background-image: linear-gradient(#1095c1,#1095c1);
+    background-size: 0 100%;
+    background-repeat: no-repeat;
+    transition: .4s;
+  }
+  .hover-1:hover {
+    background-size: 100% 100%;
+    color:white;
+  }
+
+  .active {
+    color: white;
+    background: #1095c1;
   }
