--- a/src/css/mainmenu.scss
+++ b/src/css/mainmenu.scss
@@ -72,8 +72,18 @@
   z-index: 10;
 }
 
+.right-side{
+  display: flex;
+  flex-direction: column;
+  width: 100%;  
+  height: calc(100vh - var(--pdn) * 2 );
+  gap: var(--pdn);
+}
+
 .right-container{
-  width: 70%;
+  width: 100%;
+  display: flex;
+  flex-basis: 100%;
   background-color: #ebebeb;
   border-radius: 10px; //magic number
   // box-shadow: inset 0px 2px 23px rgba(0, 0, 0, 0.25);
@@ -101,4 +111,10 @@
   // box-shadow: 0px 0px 50px -1px rgba(0,0,0,0.73); //could show a lil 1
   
   
+}
+
+.about-section{
+  height: 130px;
+  width: 100%;
+  background-color: green;
 }
