--- a/src/css/leftColumnsection.scss
+++ b/src/css/leftColumnsection.scss
@@ -47,17 +47,17 @@
   }
 
   .hover-1  {
-    background-image: linear-gradient(#1095c1,#1095c1);
+    background-image: linear-gradient(#ffffffb7,#ffffff);
     background-size: 0 100%;
-    background-repeat: no-repeat;
-    transition: .4s;
+    background-blend-mode: darken;
+    transition: .8s;
   }
   .hover-1:hover {
     background-size: 100% 100%;
-    color:white;
+    color:rgb(27, 27, 27);
   }
 
   .active {
-    color: white;
-    background: #1095c1;
+    color: rgba(0, 0, 0, 0.541);
+    background: #dee2e4b7;
   }
