--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -5,7 +5,8 @@
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-evenly;
- 
+    padding-left: 1%;
+    
     flex-basis: 15%;
     .footer-dataline{
       display: grid;
