--- a/src/css/mainmenu.scss
+++ b/src/css/mainmenu.scss
@@ -71,7 +71,7 @@
 
 .inner-shadow{
   box-shadow: inset 0px 2px 23px rgba(0, 0, 0, 0.25);
- 
+  
   position: absolute;
   top: 0;
   bottom: 0;
@@ -95,6 +95,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  border-radius: 10px; //magic number
     
   height: calc(100vh - var(--pdn) * 2 );
   gap: var(--pdn);
