remove unneccesary styling

--- a/src/css/mainmenu.scss
+++ b/src/css/mainmenu.scss
@@ -1,7 +1,7 @@
 
 .main-container{
   display: flex;
-  gap: var(--pdn);
+  gap: 0;
   background-color:#F4F2F2;
   // flex-direction: column;
   // flex-wrap: wrap;
@@ -10,64 +10,12 @@
 
 }
 
-
-// .main-container>* {
-//   flex: 0 100 0;
-// }
-
-
-
-
-.left-container{
-  
-  width: 30%;
-  height: calc(100vh - var(--pdn) * 2); //hijack(wat is hijack) height at a later date
-  overflow: hidden;
-  // border: dashed black 2px;
-  display: flex;
-  flex-direction: column;
-  padding: var(--pdn);
-  // flex-shrink: 3;
-  // align-self: baseline;
-  
-
-  .left-cont-title{
-    font-size: 3.75rem;
-    // border: dashed black 2px;
-    color: #9E9E9E;
-  }
-
-  .allposts-column{
-    // border: dashed black 2px;
-    flex-basis: 100%;
-    // background-color:wheat;
-    position: relative;
-    padding-top: var(--pdn);
-  }
-  .fade{
-    height: 3em;
-    background: rgb(255,255,255);
-    background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
-
-
-  }
-  
-
-
-
-
-
-
 @keyframes slidein {
 0%{top: 100%;}
 100%{top: 0%;}
 
 }
+
 
 .inner-shadow{
   box-shadow: inset 0px 2px 23px rgba(0, 0, 0, 0.25);
@@ -81,14 +29,7 @@
 }
 
 @media (min-width: 425px) {
-  // .right-container{
-  //   width: 100vw;
-  //   // padding: 0;
-  //   // margin: 0;
-  // };
-  // .left-container{
-  //   visibility: hidden;
-  // }
+ 
 }
 
 .right-side{
@@ -99,7 +40,7 @@
     
   height: calc(100vh - var(--pdn) * 2 );
   gap: var(--pdn);
-  // flex-grow: ;
+
 }
 
 .right-container{
@@ -109,7 +50,6 @@
   flex-direction: column;
   background-color: #ebebeb;
   border-radius: 10px; //magic number
-  // box-shadow: inset 0px 2px 23px rgba(0, 0, 0, 0.25);
   border: 1px solid rgba(0, 0, 0, 0.425);
   padding: 0 !important;
   position: relative;
@@ -132,9 +72,14 @@
   right: 0;
   border-radius: 10px;
   // -webkit-box-shadow: 0px 0px 50px -1px rgba(0,0,0,0.73); 
-  // box-shadow: 0px 0px 50px -1px rgba(0,0,0,0.73); //could show a lil 1
+  box-shadow: 0px 0px 50px -1px rgba(0,0,0,0.25); //could show a lil 1
   
   
+}
+
+.home-icon{
+  position: absolute;
+  left: 96%;
 }
 
 .about-section{
